--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
             <p class="footer__subtitle">E-mail</p>
             <a href="mailto:shreyas_ad@mt.iitr.ac.in" class="footer__text">shreyas_ad@mt.iitr.ac.in<br></a><br>
-            <a href="mailto:shreyasdongaonkar@gmail.com" class="footer__text">shreyasdongaonkar@gmail.com<br></a><br>
+            <a href="mailto:shreyasdongaonkar711@gmail.com" class="footer__text">shreyasdongaonkar711@gmail.com<br></a><br>
             <p class="footer__subtitle">Phone Number</p>
             <a class="footer__text">+91 9403613249</a><br><br>
             <p class="footer__subtitle">Address</p>
