--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div>
                             <span class="projects__subtitle">Social Entrepreneurship</span>
                             <h3 class="projects__title">Khoj</h3>
-                            <a href="https://drive.google.com/file/d/1dAAdi4VuVfswe6DWg3nZRQg4NRcZaIWl/view?usp=sharing" target="_blank" class="projects__button button button__small">View Details
+                            <a href="https://docs.google.com/presentation/d/1DeVAXAO__af3xSRA75TZiG8GCZLYru9r/edit?usp=sharing&ouid=102069626565637789469&rtpof=true&sd=true" target="_blank" class="projects__button button button__small">View Details
                                 <i class="ri-link"></i>
                             </a>
                         </div>
